abstract adj after meeting marian

--- a/tex/main/meaningfulComputation.tex
+++ b/tex/main/meaningfulComputation.tex
@@ -16,6 +16,8 @@
 [Addressing the Challenge of Visual Information Access from Digital Image and Video Libraries]\cite{Christel:2005td}
 
 \section{Computational Undertakings of the Quest}
+\subsection{The Semantic Gap}
+
 
 \subsection{Steps towards Meaning: An Overview}
 
