weporter task principles draft

--- a/tex/main/future.tex
+++ b/tex/main/future.tex
@@ -2,3 +2,6 @@
 \label{ch:future}
 
 This is the Future Directions chapter.
+
+
+Creations thus constructed will embody an interesting aspect of collective creation through the merging of content creators, people contributing their human computational capacity and algorithmic aggregation of these components. It will be interesting to see how these developments take form and how they might shape future ideas of authorship.
