task, included pictures

--- a/dissertation_main.tex
+++ b/dissertation_main.tex
@@ -4,7 +4,7 @@
 \ifpdf
    % put here packages only for the PDF:
    \DeclareGraphicsExtensions{.pdf,.png,.jpg,.mps}
-   % \usepackage{hyperref}
+   \usepackage{hyperref}
    % \usepackage[plainpages=false]{hyperref}
 \else
    % put here packages only for the DVI:
