--- a/mystyle.sty
+++ b/mystyle.sty
@@ -5,11 +5,15 @@
 
 % float for setting placement prefs
 \usepackage{float}
-\usepackage{subfig}
+% \usepackage{subfig}
+
 
 \usepackage{amsmath}
 \usepackage{algorithm,algpseudocode}
 \usepackage{caption}
+\usepackage{subcaption}
+
+
 \usepackage{color}
 
 % floatstyle to place all figs in box
