--- a/tex/main/humanComputation.tex
+++ b/tex/main/humanComputation.tex
@@ -1,6 +1,8 @@
 \chapter{Human Computation towards Visual Meaning}
 \label{ch:humancomputation}
 
+[Define GWAP]
+
 In a recent survey paper, Quinn and Bederson present a taxonomy of Human computation systems\cite{Quinn:2011us}. They sketch out the trend of this new method for intelligent problem solving by the increase of academic papers featuring the term `human computation' and its relative `crowd-sourcing'. They summarise the myriad of definitions given in recent works by several different authors in two key points:
 
 \begin{itemize}
@@ -9,7 +11,13 @@ In a recent survey paper, Quinn and Bederson present a taxonomy of Human computa
 \end{itemize}
 
 The first point introduces an interesting question whether storytelling is a computable process.
-Turing envisioned in his seminal paper computing machinery and human intelligence from 1950 [?] that a computer program would be able to successfully play a game now known as the Turing Test. ...
+In 1950, Alan Turing envisioned in his seminal paper `Computing Machinery and Intelligence' that a computer program would be able to successfully play a game now known as the Turing Test. His work also mentions that 
+
+\begin{quote}
+  ``[t]he idea behind digital computers may be explained by saying that these machines are intended to carry out any operations which could be done by a human computer''\cite{Turing:1950wi}
+\end{quote}
+
+The notion of `human computer' benefits from some contextualisation, as in the last few decades we've become unaccustomed to the term. Human computers were not uncommon in the time of Turing and before that from the 18th century, when `computer' was used to signify `one who computes'\cite{grier2007computers}. People bearing the function title were involved in the execution of calculations produced by strictly following mathematical theories. The activity that these computers were involved in was a process of rote, not requiring any human creativity. While working on the design for the first ever mechanical computer, Charles Babbage called it ``mental labour''\cite[Ch.\ 20]{Babbage:1832vu}.
 
 Quinn and Bederson further present a classification along six dimensions they see as the most salient distinguishing factors:
 
@@ -23,12 +31,12 @@ Important trend of the web as platform of creation. In terms of video creation f
 
 
 
-\section{Deriving meaning from video via Human Factors}
+\section{Deriving Meaning from Video Via Human Factors}
 [Personalized online document, image and video recommendation via commodity eye-tracking]\cite{Xu:2008vb}
 
 [VideoReach: an online video recommendation system]\cite{Mei:2007wa}
 
-\section{collaborative filtering}
+\section{Collaborative Filtering}
 
 The idea of using user's past interactions within a system hosting digital content for the filtering of items that might be of interest is not a new one and usually goes by the name of collaborative filtering. 
 Collaborative filtering can generally take two forms: User-based, Item-based
