--- a/tex/main/meaningfulComputation.tex
+++ b/tex/main/meaningfulComputation.tex
@@ -35,7 +35,7 @@ content based [Relevance feedback: A power tool for interactive content-based im
 [collaborative filtering] \url{http://en.wikipedia.org/wiki/Collaborative_filtering}
 
 \subsection{Indexing to enable search}
-Because visual data on it's own provides little machine-readable handles to search and find, repositories of multi-media content need to be index to enable search. Within the task of video indexing several approaches are taken 
+Because visual data on it's own provides little machine-readable handles to search and find, repositories of multimedia content need to be index to enable search. Within the task of video indexing several approaches are taken 
 
 
 
