--- a/tex/title.tex
+++ b/tex/title.tex
@@ -6,7 +6,7 @@
 \HRule \\[1cm]%TODO check title + subtitle
 
 \begin{tabular*}{0.95\textwidth}{@{\extracolsep{\fill}} l c r}
-		&Philo van Kemenade&\\
+		&Philo D. I. van Kemenade&\\
     % &philovankemenade [at] gmail [dot] com& 
 \end{tabular*}\\[0.3cm]
 
