--- a/tex/main/weporter.tex
+++ b/tex/main/weporter.tex
@@ -1,6 +1,31 @@
 \chapter{Human Computed Stories in wePorter}
 \label{chap:weporter}
 
+[intro: sketch wePorter scenario. youtube: Burning Man 1.7 million, Burning Man 2012 ..., Burning Man this month ...]
+
+[discuss: is wePorter human computation?
+is it solving a task that would otherwise be done by computers? By humans? Can it be expected to ever be done by computers? Looking at answers from the questionnaire to the question of why users decided to change their focus, reveal different reasons for their behaviour. A big part of the answers are generic visual or auditory features like the presence of bright colours, video or audio quality and sudden changes in movement of the scenery of camera. These are all aspects of a video that can be computed computationally, some day perhaps even in a realtime online environment. The question whether or not other features such as curiosity or boredom are computable or not is beyond the scope of this thesis, but participants' response hint at the possibility that their interest is at least partially explicable by computable factors.
+
+
+plot aggregated reasons to change:
+
+cinematography
+  camera movement
+content based
+  action
+  trees, boats
+visual
+  colour
+  quality
+  changes, movement
+audio
+  music
+Interest, curiosity / boredom
+unpleasant
+  sound
+  visuals
+]
+
 \section{Introduction}
 This section describes the interaction design of the wePorter system, built to examplify how human computation can be used in tasks like local video part filtering and semi-automated video reconfiguration. The wePorter system runs an interactive webpage that functions as the main source for data acquisition, presentation of results and general proof of concept. In this chapter the system is analysed along the axes of \textit{Purpose}, \textit{Motivation} and \textit{Task}, that were introduced in the analysis of Human Computational systems in chaperter \ref{ch:humancomputation}. Next to these guidelines for analysis, some remarks are made about the specifics in the functioning of the system. Lastly we discuss the implementation of the web application that is central in wePorter.
 
@@ -53,14 +78,14 @@ Goal of a person's query in this kind of navigation is no longer defined in a si
 
 Interactivity is generally agreed to play an important role in the task of video retrieval, as is reflected by the separate category in the annual TRECVid challenge for interactive video retrieval\cite{Smeaton:2006ww}. Several works have indicated the importance of interactivity in the task of video retrieval to filter through a set of initially returned results \cite{DeRooij:2007ua, Christel:2004wm, DeRooij:2007ua, DeRooij:2008ut}. While most of these systems are aimed at retrieval of clearly specified queries, exemplified by the TRECvid retrieval task, the need for interactive exploration is even more apparent for the broader oriented goal of users engaged in unarticulated want.
 
-\section{serving the purpose of unarticulated want}
+\subsection{Serving the Purpose of Unarticulated Want}
 The answer to a user's query now lies as much in the journey through the content as in the returned content itself. By traversing from one piece of content to the next, users construct their a sequence of concatenated pieces content. This self-constructed story is an important concept that wePorter capitalises on, as will soon become apparent.
 
 The task at hand of recommending a larger group of interesting videos is radically different compared to the more narrow queries that could be answered by a small set of true positives in an information retrieval task. Besides the spread of the searched for result across different pieces of content, there is a second important difference that lies in the nature of the majority of UGVC.
 
 User-contributed videos commonly consist of raw, unedited footage. In \cite{Rosenstiel:2012vb} Rosentiel and Mitchell report that within the collection they investigated only 39\% of the news-related footage contributed by citizens was edited. It should be noted that this collection contained only the most popular videos per week and that a different distribution will be found in the complete set of news-related videos or all the videos hosted on YouTube. 
 
-Users with broad expectations will not only want to be presented with multiple relevant items from a complete repository, they are also looking for the most interesting parts within these relevant items. This issue is particular to time-based media, and especially relevant for video. Other temporal media, like audio in general and music in particular, have less of a need for segmentation because of  their common usage in multi-media applications. People usually tend to listen to a song entirely and if they which to experience an album in part, constituent songs are already units on their own that can easily be reconfigured.
+Users with broad expectations will not only want to be presented with multiple relevant items from a complete repository, they are also looking for the most interesting parts within these relevant items. This issue is particular to time-based media, and especially relevant for video. Other temporal media, like audio in general and music in particular, have less of a need for segmentation because of  their common usage in multimedia applications. People usually tend to listen to a song entirely and if they which to experience an album in part, constituent songs are already units on their own that can easily be reconfigured. Tag-a-tune is a game with a purpose used to acquire tags for clips of music. Although it could be employed for labelling of smaller audio subclips within songs, the games only aims at global labelling of a sounds\cite{Law:2009vl}.
 
 Because of the raw, unedited nature of the majority of UGVC it is desirable to establish local recommendations that point to `subclips' within a video that are of particular interest. Whereas digital music albums shared online consist of a collection of songs that can each easily be made to stand alone, video currently suffers from a less malleable identity online.  Online videos are currently much like black boxes that can be played, paused, rated, commented on, tagged and shared only in its entirety. What if a piece of raw, unedited UGVC features something spectacular for ten seconds halfway along its timeline, but shows much of the same for the rest of the time? Answering this question will be the first part of the purpose of the wePorter system.
 
@@ -108,13 +133,13 @@ How to get a group of unrelated people to contribute their efforts to solving th
 
 \subsection{Information Provision through Online Video}
 
-Since the proliferation of mobile video recording devices, it has become common practice for large-scale (semi-)public events to be covered in UGVC that gets uploaded to the web. While some are critical\cite{Jonsson:2011fh} about the often heralded democratization and empowerment of people by the new media production and distribution tools, it is clear that the UGVC at places like youtube attracts a lot of traffic from people looking to be informed about recent events. Afterall UGVC can have its advantages over traditional video news production, especially for unexpected events where traditional media production does not have the immediacy of user-generated `reports' recorded by coincidental passersby. 
+Since the proliferation of mobile video recording devices, it has become common practice for large-scale (semi-)public events to be covered in UGVC that gets uploaded to the web. While some are critical\cite{Jonsson:2011fh} to the often heralded democratisation and empowerment of people by the new media production and distribution tools, it is clear that the UGVC at places like youtube attracts a lot of traffic from people looking to be informed about recent events. After all UGVC can have its advantages over traditional media when it comes to video news coverage, especially for unexpected events where traditional media do not have the immediacy of user-generated `reports' recorded by coincidental passersby. 
 
-In a recent study as part of the the Pew Research Center’s Project for Excellence in Journalism, for a period of 15 months the most popular video's from YouTube's `News and Politics' category are analyzed\cite{Rosenstiel:2012vb}. The authors of the study exemplify the power UGVC can have in news provision by showcasing frequently viewed videos detailling scenes from the earthquake and subsequent tsunami that hit Japan in March 2011. The week following the disaster, the 20 most viewed news-related videos on YouTube were all focused on the catastrophic event and were viewed more thatn 96 million times. Most of these videos were recorded by individuals who happened to be in the affected areas when the disaster struck, either uploaded by themselves, or by TV channels who approprioted the content. The study furthermore reports that in the investigated period, the most searched term of the month was a news-related event 5 out of 15 months.
+In a recent study as part of the the Pew Research Center’s Project for Excellence in Journalism, the most popular video's from YouTube's `News and Politics' were analysed for a period of 15 months\cite{Rosenstiel:2012vb}. The authors of the study exemplify the power UGVC can have in news provision by showcasing frequently viewed videos detailing scenes from the earthquake and subsequent tsunami that hit Japan in March 2011. The week following the disaster, the 20 most viewed news-related videos on YouTube all related to the catastrophic event and were together viewed more than 96 million times. Most of these videos were recorded by individuals who happened to be in the affected areas when the disaster struck, either uploaded by themselves, or by TV channels who appropriated the content. The study furthermore reports that in the studied period, the most searched term of the month on the YouTube platform as a whole was a news-related event 5 out of 15 months.
 
-While the journalism study above focusses on videos with the `News \& Politics' label, information provision about current event might span a larger set of catefories. Someone looking for footage in order to get a sense of the atmosphere at a recent music festival or public demonstration, might very well find relevant videos in categories like `Entertainment', `Travel \& Events' or `Nonprofits \& Activism'. Across all of these categories, we are able to find examples of UGVC, uploaded in the period following up newsworthy events.
+While the journalism study above focusses on videos with the `News \& Politics' label, information provision about current events might span a larger set of categories. Someone looking for footage in order to get a sense of the atmosphere at a recent music festival or public demonstration, might very well find relevant videos in categories like `Entertainment', `Travel \& Events' or `Nonprofits \& Activism'. Across all of these categories, we are able to find examples of vast collections of UGVC, uploaded in the period following up newsworthy events.
 
-The wePorter system focusses on these kinds of topically related sets that people are currently exploring interactively by browsing from one video to the next. This way of navigation is an intermediary between the goals of \textit{goal-oriented browse} and \textit{unarticulated want}. The unarticulated want is now encapsulated by the event but users still roam freely within this topicalized set of content. By navigating from video to video, watching some and skipping others, users leave attentional traces that give valuable insight into a user's intentional standpoint.
+The wePorter system focusses on these kinds of topically related sets that people are currently exploring interactively by browsing from one video to the next. This way of navigation is an intermediary between the goals of \textit{goal-oriented browse} and \textit{unarticulated want}. The apparently aimless browsing is now encapsulated by the event but users still roam freely within this topicalized set of content. By navigating from video to video, watching some and skipping others, users leave attentional traces that give valuable insight into a user's intentional standpoint.
 
 It is this kind of interactions that are already taking place at a large scale that we like to make use of in the wePorter system. Motivated by the whish to explore informative content, users will instinctively and implicitly contribute their human knowledge to a system that is set up appropriately. This kind of motivation fits the category of `implicity work' as it involves activities that people already enage in for their own reasons\cite{Quinn:2011us}. Considering users' wish to be informed and the interactive way in which they navigate, there is most likely also a factor of enjoyment involved though. We expect though that the more specific motivation of information provision might show to become a valid categorisation for the motivation of people in a HCS as it is a common activity on the web and inherently linked with the hard problem of meaningful interpretation of content.
 
@@ -127,69 +152,113 @@ Below are included several points that have been instructive in the development 
 
 \subsubsection{wePorter is a web interface}
 The power of a HCS that relies on data from many interactions is truly unleashed in an online setting, where many people can easily participate and interact. For this goal alone already, wePorter must be a web-based system.
-Besides the obvious choice of staying in the realm of the online video content, it makes sense to embed the theoretical explorations of this research in the practicalities of current web technologies. With the ongoing development of technology like HTML5, many new possibilities for a user's web browser are unleashed. The implementation of a research tool concerning online video is a good opportunity for the exploration of the technological possibilities of present day web technlogies.
+Besides the obvious choice of staying in the realm of the online video content, it makes sense to embed the theoretical explorations of this research in the practicalities of current web technologies. With the ongoing development of technology like HTML5, many new possibilities for a user's web browser are unleashed. The implementation of a research tool concerning online video is a good opportunity for the exploration of the technological possibilities of present day web technologies.
+
+\subsubsection{Hyperlinked Multimedia}
+The power of digital content on the internet lies for a great part in its capacity to be hyperlinked. This alleviates the burden of having to host or recompile pieces of media. Instead, files can simply be played and remixed by reference, leaving their respective sources intact and where they are. In the presentation of their digital video repurposing system `Diver', Pea et al. indicate the advantages of using a virtual camera controlled by XML-based files that reference parts of source video instead of rendering new video clips\cite{Pea:2004td}:
+
+\begin{itemize}
+  \item ``Virtual video clips eliminate the generation of redundant video files, greatly reducing disk storage requirements.''
+  \item ``No rendering time means vastly improved performance. Users can instantly create and play back dynamic path videos without long video-rendering delays.''
+\end{itemize}
+
+An implementation of a system where users interact with content that is dynamically reconfigured in real-time will benefit considerably from a hyperlinked functionality, especially when this takes place in an online setting where bandwidth will be limited.
+
+\subsubsection{Localized Interest} % Define `source videos' and `video parts' here?
+In order to elicit users' interest in particular parts within a video, we divide each videos in our initial set of topic-related content into smaller parts when presenting them in a user interaction. Slicing up source videos virtually and playing their parts by reference is made possible by a hyperlinked implementation of the video player.
 
 \subsubsection{Interest Elicitation}
-The user interaction design should enable means to learn about a user's interest in a video at a particular moment in time. This to the purpose of discovering localized regions of interest within single videos.
+The user interaction design should enable means to learn about a user's interest in a video at a particular moment in time. This to the purpose of discovering localised regions of interest within single videos.
+
+% attention -> interest
+Considering measures that could indicate how people's interest varies across different videos, an idea that quickly surfaced is that interest might be closely linked to attention. When a piece of content contains something that is interesting to many people, this will most likely result in an increase in views, provided the content is accessible to a variety of people. This simple notion is the idea behind global recommendations that show most popular or `trending' content. Whether the trending item is a video on a sharing platform or a phrase on a microblogging service, when there is a large number of people attending to it, this is a reason to suspect the item to be of interest, even for people who haven't engaged with it yet.
+
+% normally need for personalization
+An obvious limitation of these global recommendations is the lack of personalisation. Personalised recommendations are offered because the content that is globally popular may not be related to the topics of my interest. For the purpose wePorter is serving however, focus around a particular topic is already in place and are in the first instance mostly interested at picking out the parts that share a high level of interest globally.
 
 \subsubsection{Recurrent Interaction}
 Because of the reliance on data, user's should be able (and encouraged) to engage in the interaction more than once.
 
-\subsubsection{Users between consumers and producers}
-Studies reflecting on new media technology and its incorporation in our everyday life are often speaking of a media convergence, where traditional roles of passive consumers and active producers are mixed and merged. This movement indicates new expectations from users of new media applications. The trend of users' more active engagement in new media technology fits well with the approach of interest defined by patterns of interaction and our idea of storytelling as structured recommendation.
+\subsubsection{Users Between Consumers and Producers}
+Studies reflecting on new media technology and its incorporation in our everyday life are in recent years often speaking of a media convergence, where multimedia content flows dynamically across multiple media platforms and media audiences take an active, participatory role in their search for entertainment experiences. In his book `Convergence Culture', Jenkins writes:
+
+\begin{quote}
+  ``This circulation of media content - across different media systems, competing media economies, and national borders - depends heavily on consumers' active participation. I will argue here against the idea that convergence should be understood primarily as a technological process bringing together multiple media function within the same devices. Instead, convergence represents a cultural shit as consumers are encouraged to seek out new information and make connections among dispersed media content. [...] The term \emph{praticipatory culture} contrasts with older notions of passive media spectatorship. Rather htan talking about medie producers and consumers as occupying separate roles, we might now see them as participants who interact with each other according to a new set of rules that none of us fully understands.''
+\end{quote}
+
+Surveying the diverse body of research into interactive TV, Cesar and Chorianopoulos propose a new view that considers content editing, content sharing and content control as an alternative to the more hierarchical  `produce-deliver-consume' paradigm associated with traditional media\cite{Cesar:2009fk}. The movement from passive consumers to (inter)active contributors indicates new expectations by users of new media applications. The trend of users' more active engagement in new media technology fits well with the approach of interest defined by users' interaction and our proposal of storytelling as structured recommendation.
 
 \subsubsection{The Death of the Author, the Birth of Collective Creation}
-Originally voiced by Roland Barthes, who was contemplating a way of literary writing without the use of a clear narrator. He titled his essay 'the death of the author' to signify the lack of presence of an author in written work following this style of writing. In our aim of reconfiguring interesting subclips in a new arrangement, the issue of authorship surfaces in a new context. 
+Originally voiced by Roland Barthes, who was contemplating a way of literary writing without the use of a clear narrator. He titled his essay `the death of the author' to signify the lack of presence of an author in written work following this style of writing. In our aim of reconfiguring interesting sub-clips in a new arrangement, the issue of authorship surfaces in a new context. 
 
-New forms of digital content licencing, like creative commons, mean that it is now possible for content uploaded by its original creator, to be used under specified conditions in a new piece of work by someone else. These kinds of licences make it possible for works not only to be used and remixed by other individuals, but also to be incorporated in algorithmically constructed reconfigurations. 
+Less restrictive forms of digital content licensing, like Creative Commons (CC), mean that it is now possible for content uploaded by its original creator, to be used under specified conditions in a new piece of work by someone else. This kind of licences has been noted to be an important facilitator of research into Human Computation\cite{Law:2009vl}. They make it possible for works not only to be used and remixed by other individuals, but also to be incorporated in algorithmically constructed reconfigurations of user generated content.
+
+Different video platforms are currently offering less-restrictive CC licensing as an integrated part of their services. YouTube currently offers the option of choosing a most basic attribution licence and reports 4 million videos licensed this way \cite{youtubeCC}. The video platform Vimeo focusses on letting video and animation producers share and showcase their original work. The platform has internalized the use of CC from 2010\cite{vimeoTimeline} and many of their users licence their videos such that they can be remixed by others. Figure \ref{fig:vimeoCC} shows that a large part of the licences on the Vimeo platform allow derivatives to be made\cite{vimeoCC}.
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[scale=1]{img/vimeoCC}
+  \caption{Number of videos for each of the Creative Commons licences on Vimeo}
+  \label{fig:vimeoCC}
+\end{figure}
 
 \subsection{The Interface}
 
+This sections describes the user interface that directs participation of wePorter users towards solving the purpose of distinguishing local intervals of interest within videos. After a conceptual overview of the functioning we include a walkthrough to explain precisely how the interaction takes place.
+
+% hypothesis: interest will be reflected in attention
+We hypothesise that interesting parts of content will attract a relatively large amount of attention compared to less interesting parts. 
+
+% parallel play; move up to design considerations?
+To force a users to make an explicit choice between parts of content for which we would like to elicit their interest, we present two pieces of video playing concurrently and force users to attend to one or the other. In order to get an idea of the variation of interest across a video, \emph{`source videos'} are divided into smaller \emph{`video parts'}, each of which is presented separately in interactions over time. During this `parallel play' of two video parts we capture the amount of time attended to each of the parts and store this for later analysis.
+
+\subsubsection{A Walkthrough}
+When a user opens the wePorter web interface he is welcomed by a short introduction to the project and successively guided to further instructions explaining the experiment. Introduction header and instructions are shown in \ref{fig:siteIntro}
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=\textwidth]{img/header_noline}
+  \caption{wePorter Website Header}
+  \label{fig:header}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=\textwidth]{img/instructions}
+  \caption{wePorter Instructions}
+  \label{fig:instructions}
+\end{figure}
+
+
+\begin{figure}
+  \centering
+  \begin{subfigure}[b]{.5\textwidth}
+          \centering
+          % \includegraphics[width=\textwidth]{img/pplay1}
+          \includegraphics[height=10cm]{img/pplay1}
+          \vfil
+          \caption{Upon load}
+          \label{fig:pplay1}
+  \end{subfigure}%
+  ~
+    %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
+    %(or a blank line to force the subfigure onto a new line)
+  \begin{subfigure}[b]{.5\textwidth}
+          \centering
+          % \includegraphics[width=\textwidth]{img/pplay2}
+          \includegraphics[height=10cm]{img/pplay2}
+          \vfil
+          \caption{While playing, focus on top video}
+          \label{fig:pplay2}
+  \end{subfigure}
+  \caption{The wePorter parallel play interface}\label{fig:interface}
+\end{figure}
+
+% even higher resolution
+In its current version the system uses aggregate counts for the time a user focussed on a particular sub-clipd
 
 
 
-In order to get an idea of how interest of people varies across time within a single piece of video
-
-
-\subsection{Between consumer and producer}
-
-Between Couch Potato and Video Editor
-The interaction here presented is the result of a design process motivated by the wish to solve a challenge:
-
-How to get massive amounts of people collaboratively contributing to the shape of a video story?
-
-An answer to this question should balances extremes in multiple dimensions:
-creation vs consumption
-active vs passive
-advanced control vs easy access
-
-A central idea in the wePorter system is that video consumption and video creation might be more closely related than traditionally thought. In fact, relating these two aspects is a key element in the interaction design here presented.
-
-Traditionally, models of media productions, distribution and consumption have usually assumed a strict division between the roles of producers and consumers. [need for New Media studies ref] The classical image of television viewers is that of passive couch potatoes, comfortably leaned back on the sofa in their living room. Literally miles apart from them are content producers like reporters, presenters, cameramen, directors, editors and so on, who capture, form and present the content that is viewed on screen.
-
-Thanks to the creative use of telecommunications technology, some television programmes have embraced more interactivity between the two roles. Formats like the numerous talent shows that let people vote by text or gameshows where people play by calling in by telephone, are examples where consumers influence what happens onscreen, but roles of creator and consumer stay effectively unchanged. Creators are still responsible for the production of content shown onscreen. In living up to this responsibility, they
-
-Video Editor
-Couch Potato
-creator
-consumer
-active
-passive
-making
-viewing
-active
-passive
-difficult
-easy
-
-% Online interaction front-end
-% Using HTML, CSS, JavaScript (Popcorn.js)
-% At Github: https://github.com/phillchill/wePorter
-% 
-% User Experience
-% 
-% 
-% Web Interaction v_3
 
 
 Parallel player
@@ -215,7 +284,7 @@ By making data acquisition from interaction an intrinsic part of a human computa
 	-> curation through interaction
 
 
-\section{Analysis of the wePorter System}
+\section{Analysis of the Weporter System}
 
 \subsection{Landscapes of Interest}
 
@@ -238,7 +307,7 @@ Several recent developments now make possible this collective form of authorship
 - the Methods to link, mix, aggregate and modify content online.
 
 \section{Parallel Play}
-A new method for preference elicitation in time-based multi-media content.
+A new method for preference elicitation in time-based multimedia content.
 
 
 
@@ -246,6 +315,8 @@ and a task is set up such that their interactions are recorded as contributions 
 
 \section{Implementation}
 \label{sec:implementation}
+
+% can handle videos of different dimensions
 
 $\underset{x}{\operatorname{argmin}}$
 
