ch weporter finished Task, updated motivation

--- a/tex/bib/mybib_misc_webpages.bib
+++ b/tex/bib/mybib_misc_webpages.bib
@@ -30,3 +30,18 @@
   note = {Accessed: 15/09/2012},
 }
 
+@misc{manovichAuthor,
+  Title = "Who is the Author? Sampling / Remixing / Open Source",
+  Author = "Lev Manovich",
+  howpublished = {\url{http://www.manovich.net/DOCS/models_of_authorship.doc}},
+  note = {Accessed: 16/09/2012},
+}
+
+
+
+@misc{youtubeBM,
+  Title = "Searching YouTube for ``Burning Man, this month",
+  howpublished = {\url{http://www.youtube.com/results?search_query=burning+man}},
+  note = {Accessed: 17/09/2012},
+}
+
