--- a/tex/main/evaluation.tex
+++ b/tex/main/evaluation.tex
@@ -2,3 +2,7 @@
 \label{ch:evaluation}
 
 This is the Evaluation section.
+
+
+\section{The Interface}
+Positioning two video's one on top of the other, might inflict a bias for users in their attentional behaviour. It might be the case that videos on the top are systematically more attended to than videos displayed below. We've experimented to see whether such positioning bias effects occur and report on this in section \ref{sec:experiments} [*TODO ref].
