--- a/tex/main/future.tex
+++ b/tex/main/future.tex
@@ -5,3 +5,9 @@ This is the Future Directions chapter.
 
 
 Creations thus constructed will embody an interesting aspect of collective creation through the merging of content creators, people contributing their human computational capacity and algorithmic aggregation of these components. It will be interesting to see how these developments take form and how they might shape future ideas of authorship.
+
+
+% higher resolution of interest elicitation
+In its current version the system uses aggregate counts for the time a user focussed on a particular sub-clips. Since the interactive player is set up to capture users' focus every 100 milliseconds, this could also become the resolution of recording. That way each video parts would have $length/\delta$ time bins in a interest histogram.
+
+% more videos in parallel!!!
