--- a/tex/main/humanComputation.tex
+++ b/tex/main/humanComputation.tex
@@ -1,6 +1,9 @@
 \chapter{Human Computation towards Visual Meaning}
 \label{ch:humancomputation}
 
+% introduction
+
+\section{Characterising Human Computation}
 [Define GWAP]
 
 In a recent survey paper, Quinn and Bederson present a taxonomy of Human computation systems\cite{Quinn:2011us}. They sketch out the trend of this new method for intelligent problem solving by the increase of academic papers featuring the term `human computation' and its relative `crowd-sourcing'. They summarise the myriad of definitions given in recent works by several different authors in two key points:
@@ -22,6 +25,20 @@ The notion of `human computer' benefits from some contextualisation, as in the l
 Quinn and Bederson further present a classification along six dimensions they see as the most salient distinguishing factors:
 
 [table of dimensions?]
+
+% many people watching collaborating
+% is collective intelligence HC?
+Clicking from one video to the next (choosing from a set of related videos)
+these inter-video links could be seen as indicators for relatedness and relevance, much like google's page rank algorithm use links across webpages to establish a notion of the most significant site on a particular topic. 
+
+There is an important difference here though. Whereas the links used by Google's search algorithms are embedded in machine readable hyperlinks, the path of clicking on from one video to the next is a characteristic of a person's interaction. 
+
+differences:
+	public, readable // private, non readable
+	conscious choice // unconcious result of interaction
+	Concluding
+		can be consciously put in place by several people at large scale // dependent on real `human' traffic.
+
 
 
 \subsection{The web as platform for creation}
