--- a/tex/main/meaningfulComputation.tex
+++ b/tex/main/meaningfulComputation.tex
@@ -1,15 +1,18 @@
 \chapter{The Quest for Meaning in Video}
 \label{ch:quest}
 
-\section{Forms of Meaning in Film and Video}
+[The intention of this thesis is not to give an accurate explanation of daunting concepts like meaning or semantics, nor is it to give an in-depth description of the diverse work on the relationship between signifier and signified in the field of semiotics. This first chapter is meant to briefly introduce the difficulties that current computational methods have in arriving at a meaningful interpretation of visual content. To this purpose we formulate a framework of computational analyses of meaning that serves to establish terminology to work with, rather than to make claims about the internal functioning of human understanding or signifying systems.]
+
+\section{Computational Undertakings of the Quest for Meaning}
 
 \subsection{Meaning in Visuals}
 [Video structuring, indexing and retrieval based on global motion wavelet coefficients]\cite{Bruno:2002tt}
 
-
 \subsection{Meaning in Concept}
 \subsection{Meaning in Structure}
 [cite bordwell \& Thompson: analysis of context dependency]
+% hypervideo as form of 1 narrative 2 navigation, link to database documentary
+[HyperCafe: Narrative and Aesthetic Properties of Hypervideo \cite{Sawhney:1996tk}]
 
 \subsection{Meaning in Annotations}
 [Telop-on-demand: Video structuring and retrieval based on text recognition]\cite{Kuwano:2000wy}
@@ -20,7 +23,6 @@
 
 
 \subsection{Steps towards Meaning: An Overview}
-
 Schematized summary of different steps:
 indexing
 automatic metadata
@@ -36,6 +38,14 @@ content based [Relevance feedback: A power tool for interactive content-based im
 
 \subsection{Indexing to enable search}
 Because visual data on it's own provides little machine-readable handles to search and find, repositories of multimedia content need to be index to enable search. Within the task of video indexing several approaches are taken 
+
+\section{Computational Difficulties}
+
+% problem is that no CV algorithms perform reliable AND generally
+
+% the problem of acquiring labelled data for ML approaches
+% problem of keeping ML techniques up to date in a dynamical environment where new content is added every minute (and a lot of it as we will see when we discuss user generated online video)
+
 
 
 
