--- a/tex/main/storytelling.tex
+++ b/tex/main/storytelling.tex
@@ -21,4 +21,4 @@ examples like: Aaron Koblin (johnny cash project, exquisite corps, etc)
 
 there is even word of a true remix culture.
 
-the availability of multi-media content via the internet has meant a surge in 
+the availability of multimedia content via the internet has meant a surge in 
